syntax = "proto3";
option java_multiple_files = true;

package kvstore.servers;

message ClientMsg {
    int32 clientId = 1;
    int32 action = 2;
    string key = 3;
    string value = 4;
    int32 option = 5;
}

message ServerResponse {
    int32 status = 1;
}

service ClientService {
    rpc sendRequest (ClientMsg) returns (ServerResponse);
}
