syntax = "proto3";
option java_multiple_files = true;

package kvstore.common;

message WriteReq {
    string key = 1;
    string val = 2;
}

message WriteResp {
    int32 receiver = 1;
    int32 status = 2;
}