syntax = "proto3";
option java_multiple_files = true;
import "Common.proto";

package kvstore.servers;

message WorkerStatus {
    int32 workerId = 1;
    int32 status = 2;
}

message MasterResponse {
    int32 status = 1;
}

service MasterService {
    rpc reportStatus (WorkerStatus) returns (MasterResponse);
    rpc writeMsg (kvstore.common.WriteReq) returns (kvstore.common.WriteResp);
}